feat(adventofcode): 2024: finish day 10 🌟🌟